--- a/Desafios/d05/estilo/style.css
+++ b/Desafios/d05/estilo/style.css
@@ -49,11 +49,15 @@ a:hover {
 
 section {
     padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-bottom: 10vh; /* vh = viewport height */
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte03);
-    font-size: 3.5vw;
+    font-size: 3.5vw; /* vw = viewport width */
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -64,12 +68,26 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.479); /* inset = sombra para dentro */
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block; /* Com essa config, o bloco vai se adaptar. */
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer {
